--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
     "bootstrap": "^5.1.3",
+    "canvasjs-react-charts": "^1.0.5",
     "chart.js": "^3.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
