--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -11,10 +12,13 @@
     "bootstrap": "^5.1.3",
     "canvasjs-react-charts": "^1.0.5",
     "chart.js": "^3.6.0",
+    "multi-range-slider-react": "^1.0.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
+    "react-google-charts": "^3.0.15",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
